--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
                 </li>
 
                 <li>
-                    <a href=""> Services</a>
+                    <a href=""> A propos</a>
                 </li>
 
                 <li>
-                    <a href="">Partenaires </a>
+                    <a href="">Travail</a>
+                </li>
+
+                <li>
+                    <a href="">CV</a>
                 </li>
 
                 <li>
@@ -33,7 +37,7 @@
             <div>
                 <img src="photo.jpg" width="100px" height="100px" alt="">
             </div>
-            
+
         </nav>
 
     </header>
@@ -42,13 +46,16 @@
 
 
         <article>
-            <h1>  Titre <h1>
+            <h1>  A Propos <h1>
 
-            <p> Mon premier paragraphe... </p>
+            <p> Nous sommes... </p>
 
             <audio controls>
                 <source src="test.mp3" type="audio/mpeg">
             </audio>
+        </article>
+        <article>
+            <h3>Cv</h3>
         </article>
 
   
@@ -56,7 +63,7 @@
     </section>
 
     <aside>
-
+        <h3>Nos employes</h3>
         <table border="2px">
             <tr>
                 <td>Nom</td>
@@ -101,7 +108,7 @@
 
         <nav>
 
-            <a href="#top"></a>
+            <a href="#top">Cliquez pour remonter</a>
             <div>
                 <a href="">facebook </a>
                 <a href="">Instagrame </a>
